--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,6 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         }
       }
       fishList = Array.from(fishSet).sort();
-      renderFishCheckboxes();
     } catch(e) { console.error("魚読み込みエラー:", e); }
   });
 
@@ -1621,6 +1620,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
       counterContainer.style.display = 'block';
       summaryContainer.style.display = 'block';
       renderMealData();
+      renderSummary();
     } else {
       counterContainer.style.display = 'none';
       summaryContainer.style.display = 'none';
@@ -1649,6 +1649,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
   function renderFishCheckboxes() {
     includeFishContainer.innerHTML = "";
     excludeFishContainer.innerHTML = "";
+
     fishList.forEach(f => {
       const inc = document.createElement("label");
       const incInput = document.createElement("input");
@@ -1670,6 +1671,30 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
     });
   }
 
+  // 🔹 ラジオ（指定する／指定しない）
+  document.querySelectorAll('input[name="includeFishMode"]').forEach(radio => {
+    radio.addEventListener("change", e => {
+      if (e.target.value === "specify") {
+        includeFishContainer.style.display = "block";
+        if (fishList.length > 0) renderFishCheckboxes();
+      } else {
+        includeFishContainer.innerHTML = "";
+        includeFishContainer.style.display = "none";
+      }
+    });
+  });
+  document.querySelectorAll('input[name="excludeFishMode"]').forEach(radio => {
+    radio.addEventListener("change", e => {
+      if (e.target.value === "specify") {
+        excludeFishContainer.style.display = "block";
+        if (fishList.length > 0) renderFishCheckboxes();
+      } else {
+        excludeFishContainer.innerHTML = "";
+        excludeFishContainer.style.display = "none";
+      }
+    });
+  });
+
   // 🔹 データ保存
   function saveCurrentMealData() {
     const idx = currentCount;
@@ -1682,7 +1707,6 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
     renderSummary();
   }
 
-  // 🔹 各種変更イベントで保存
   [...diffRadios, ...timeRadios, ...costRadios].forEach(el => el.addEventListener('change', saveCurrentMealData));
 
   // 🔹 データ反映
@@ -1696,17 +1720,31 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
     costRadios.forEach(r => r.checked = (r.value === d.cost));
   }
 
-  // 🔹 サマリー描画
+  // 🔹 サマリー描画（カード形式＋単位付き）
   function renderSummary() {
     let html = "";
     for (let i = 1; i <= p; i++) {
       const d = mealSettings[i] || createDefaultMealSetting();
-      html += `<div style="margin-bottom:5px;">
-        <strong>${i}食目:</strong><br>
-        魚=${d.includeFish.join(",") || "なし"}<br>
-        除外=${d.excludeFish.join(",") || "なし"}<br>
-        難易度=${d.difficulty || "制限なし"} / 時間=${d.time || "制限なし"} / 費用=${d.cost || "制限なし"}
-      </div>`;
+      const diffTxt = d.difficulty ? `Lv.${d.difficulty}` : "制限なし";
+      const timeTxt = d.time ? `${d.time}分以内` : "制限なし";
+      const costTxt = d.cost ? `¥${d.cost}以下` : "制限なし";
+
+      html += `
+        <div style="
+          background:#fff;
+          border:1px solid #ddd;
+          border-radius:10px;
+          padding:10px;
+          margin-bottom:10px;
+          box-shadow:1px 1px 4px rgba(0,0,0,0.1);
+        ">
+          <strong style="font-size:1.1em;">🍽 ${i}食目</strong><br>
+          <span style="color:#333;">🐟使う魚：</span>${d.includeFish.join(", ") || "なし"}<br>
+          <span style="color:#333;">🚫除外魚：</span>${d.excludeFish.join(", ") || "なし"}<br>
+          <span style="color:#333;">🎯難易度：</span>${diffTxt}<br>
+          <span style="color:#333;">⏱時間：</span>${timeTxt}<br>
+          <span style="color:#333;">💰費用：</span>${costTxt}
+        </div>`;
     }
     mealSummary.innerHTML = html;
   }
@@ -1715,9 +1753,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
   diffRadios.forEach(r => r.addEventListener('change', () => diffContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
   timeRadios.forEach(r => r.addEventListener('change', () => timeContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
   costRadios.forEach(r => r.addEventListener('change', () => costContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
-
 })();
-
 
 
 
